Fix iconoir icons vertical alignment

--- a/web-frontend/modules/core/assets/scss/icons.scss
+++ b/web-frontend/modules/core/assets/scss/icons.scss
@@ -21,3 +21,8 @@
     @include baserow-icon($icon);
   }
 }
+
+*[class^='iconoir-'],
+*[class*=' iconoir-'] {
+  vertical-align: middle;
+}
